editor/tree-sitter-sigil/test/corpus/strings.txt
==================
string interpolation and field access
==================

let r = "hi ${user.name}!"

---

(source_file
  (let_decl name: (identifier)
    (string
      (interpolation (field record: (identifier) field: (identifier))))))
